<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="75dp"
    android:background="@drawable/rounded_textinput">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/rounded_textinput"
        android:orientation="horizontal"
        android:weightSum="5"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/homeBtn10"
            android:layout_width="0dp"
            android:layout_height="30dp"
            android:layout_weight="1"
            android:layout_gravity="center"
            android:layout_marginTop="15dp"
            android:layout_marginBottom="15dp"
            android:contentDescription="@string/bottom"
            app:srcCompat="@drawable/ic_home"
            tools:ignore="ImageContrastCheck" />

        <ImageView
            android:id="@+id/productBtn10"
            android:layout_width="0dp"
            android:layout_height="35dp"
            android:layout_weight="1"
            android:layout_gravity="center"
            android:layout_marginTop="15dp"
            android:layout_marginBottom="15dp"
            android:contentDescription="@string/bottom1"
            app:srcCompat="@drawable/ic_mood_happy"
            tools:ignore="ImageContrastCheck" />

        <ImageView
            android:id="@+id/expertsBtn10"
            android:layout_width="0dp"
            android:layout_height="30dp"
            android:layout_weight="1"
            android:layout_gravity="center"
            android:layout_marginTop="15dp"
            android:layout_marginBottom="15dp"
            android:contentDescription="@string/bottom2"
            app:srcCompat="@drawable/ic_habits"
            tools:ignore="ImageContrastCheck" />

        <ImageView
            android:id="@+id/profileBtn10"
            android:layout_width="0dp"
            android:layout_height="35dp"
            android:layout_weight="1"
            android:layout_gravity="center"
            android:layout_marginTop="15dp"
            android:layout_marginBottom="15dp"
            android:contentDescription="@string/bottom3"
            app:srcCompat="@drawable/ic_water"
            tools:ignore="ImageContrastCheck" />

        <ImageView
            android:id="@+id/profileBtn11"
            android:layout_width="0dp"
            android:layout_height="35dp"
            android:layout_weight="1"
            android:layout_gravity="center"
            android:layout_marginTop="15dp"
            android:layout_marginBottom="15dp"
            android:contentDescription="@string/bottom4"
            app:srcCompat="@drawable/ic_settings"
            tools:ignore="ImageContrastCheck" />
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>